--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@types/express": "5.0.3",
+    "@types/node": "22.7.4",
     "@rollup/plugin-node-resolve": "15.3.0",
     "core-js": "3.38.1",
     "rollup": "4.24.0",
