--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
     "@dwtechs/winstan": "0.4.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.26.0",
     "@types/express": "5.0.3",
     "@types/node": "22.7.4",
     "@rollup/plugin-node-resolve": "15.3.0",
+    "babel-jest": "29.7.0",
     "core-js": "3.38.1",
+    "jest": "29.7.0",
     "rollup": "4.24.0",
     "typescript": "5.9.2"
   }
